# ethology

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api_index.html  genindex.html  index.html  installation.html  notebook_boxmot_crabs.py  notebook_boxmot_poses.py  notebook_cotracker_offline.py  notebook_cotracker_online.py  notebook_detector_inference.py  notebook_run_detection_on_dataset.py  notebook_run_detection_on_video.py  notebook_subset_sum.py  notebook_visualise_detections.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs_build_and_deploy.yml  test_and_deploy.yml
_downloads/1115079047e8c6a255eb9531b5a5302a/: approximate_subset_sum_split.ipynb
_downloads/14045b4ddd29bfb3fe0e3df45c0c298d/: coco_bbox_ethology_and_movement.ipynb
_downloads/86aac0f384787a94a4d61c70ef0b9361/: approximate_subset_sum_split.py
_modules/: index.html
_sources/: api_index.rst.txt  installation.md.txt  sg_execution_times.rst.txt
_sources/api/: ethology.annotations.io.load_bboxes.from_files.rst.txt  ethology.annotations.io.load_bboxes.rst.txt  ethology.annotations.io.save_bboxes.rst.txt  ethology.annotations.io.save_bboxes.to_COCO_file.rst.txt  ethology.annotations.validators.ValidCOCO.rst.txt  ethology.annotations.validators.ValidVIA.rst.txt  ethology.annotations.validators.rst.txt  ethology.datasets.split.rst.txt  ethology.datasets.split.split_dataset_group_by.rst.txt  ethology.datasets.split.split_dataset_random.rst.txt  ethology.io.annotations.load_bboxes.from_files.rst.txt  ethology.io.annotations.load_bboxes.rst.txt  ethology.io.annotations.save_bboxes.rst.txt  ethology.io.annotations.save_bboxes.to_COCO_file.rst.txt  ethology.io.annotations.validate.ValidBboxesDataFrame.rst.txt  ethology.io.annotations.validate.ValidBboxesDataFrameCOCO.rst.txt  ethology.io.annotations.validate.ValidBboxesDataset.rst.txt  ethology.io.annotations.validate.ValidCOCO.rst.txt  ethology.io.annotations.validate.ValidVIA.rst.txt  ethology.io.annotations.validate.rst.txt  ethology.validators.annotations.ValidBboxAnnotationsCOCO.rst.txt  ethology.validators.annotations.ValidBboxAnnotationsDataFrame.rst.txt  ethology.validators.annotations.ValidBboxAnnotationsDataset.rst.txt  ethology.validators.annotations.ValidCOCO.rst.txt  ethology.validators.annotations.ValidVIA.rst.txt  ethology.validators.annotations.rst.txt  ethology.validators.detections.ValidBboxDetectionsDataset.rst.txt  ethology.validators.detections.rst.txt  ethology.validators.json_schemas.utils.rst.txt  (+2 more)
_static/: documentation_options.js
api/: ethology.annotations.io.load_bboxes.from_files.html  ethology.annotations.io.load_bboxes.html  ethology.annotations.io.save_bboxes.html  ethology.annotations.io.save_bboxes.to_COCO_file.html  ethology.annotations.validators.ValidCOCO.html  ethology.annotations.validators.ValidVIA.html  ethology.annotations.validators.html  ethology.datasets.split.html  ethology.datasets.split.split_dataset_group_by.html  ethology.datasets.split.split_dataset_random.html  ethology.io.annotations.load_bboxes.from_files.html  ethology.io.annotations.load_bboxes.html  ethology.io.annotations.save_bboxes.html  ethology.io.annotations.save_bboxes.to_COCO_file.html  ethology.io.annotations.validate.ValidBboxesDataFrame.html  ethology.io.annotations.validate.ValidBboxesDataFrameCOCO.html  ethology.io.annotations.validate.ValidBboxesDataset.html  ethology.io.annotations.validate.ValidCOCO.html  ethology.io.annotations.validate.ValidVIA.html  ethology.io.annotations.validate.html  ethology.validators.annotations.ValidBboxAnnotationsCOCO.html  ethology.validators.annotations.ValidBboxAnnotationsDataFrame.html  ethology.validators.annotations.ValidBboxAnnotationsDataset.html  ethology.validators.annotations.ValidCOCO.html  ethology.validators.annotations.ValidVIA.html  ethology.validators.annotations.html  ethology.validators.detections.ValidBboxDetectionsDataset.html  ethology.validators.detections.html  ethology.validators.json_schemas.utils.html  ethology.validators.utils.ValidDataset.html  ethology.validators.utils.html
community/: contributing.html  index.html  license.html  mission-scope.html  related-projects.html
docs/: Makefile  make.bat  make_api_index.py  requirements.txt
docs/source/: conf.py  (+5 more)
ethology/: __init__.py  logging.py  mlflow.py  torch_dataset.py
examples/: 01_annotations_as_torch_dataset.py  02_approximate_subset_sum_split.py  GALLERY_HEADER.rst  README.rst  annotations_as_torch_dataset.py  approximate_subset_sum_split.html  approximate_subset_sum_split.py  coco_bbox_ethology_and_movement.html  coco_bbox_ethology_and_movement.py  ensemble_of_detectors.py  ensemble_of_detectors.yaml  index.html  load_annotations_dataset.html  load_annotations_dataset.py  napari_point_tracking.py  sg_execution_times.html  tracking_using_cotracker.py  trained_detector_inference.py
notebooks/: notebook_annotations_as_movement_dataset.py  notebook_annotations_movement.py  notebook_bin_detections.py  notebook_combine_detections.py  notebook_detect_with_ensemble_vectorized.py  notebook_evaluate_binned_performance.py  notebook_export_annotations.py  notebook_mlflow_plots.py  notebook_regenerate_labelled_dataset.py  notebook_run_detection_on_dataset.py  notebook_run_detection_on_eval_dataset.py  notebook_run_ensemble_on_eval_dataset.py  notebook_run_ensemble_on_video.py
tests/: __init__.py  conftest.py  test_image_registration.py
(+140 files in other folders)
